[gd_scene load_steps=3 format=3 uid="uid://bp4egawc77s6r"]

[ext_resource type="Script" uid="uid://bqod8poqpapiu" path="res://Player/player_camera.gd" id="1_ehrhw"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_3qydi"]

[node name="PlayerCamera" type="Node3D"]
script = ExtResource("1_ehrhw")

[node name="HorizontalPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="VerticalPivot" type="Node3D" parent="HorizontalPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)

[node name="CameraArm" type="SpringArm3D" parent="HorizontalPivot/VerticalPivot"]
transform = Transform3D(1, 0, 0, 0, 0.99999994, 0, 0, 0, 0.99999994, 0, 0, 0)
shape = SubResource("SeparationRayShape3D_3qydi")
spring_length = 9.0
margin = 2.0

[node name="Camera3D" type="Camera3D" parent="HorizontalPivot/VerticalPivot/CameraArm"]
